--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PORTEN</title>
     <link rel="stylesheet" href="./stayl.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300;1,400;1,500;1,700&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body style="background: #000000;">
 
 
@@ -25,7 +27,7 @@
                     <div class="col-6">
                         <div class="dada">
                             <i class="fa-sharp fa-solid fa-phone"></i>
-                        <p class="lola">8 (812) 123-45-67    |    Работаем 7 дней в неделю    |    9:00 — 18:00  p>
+                            <p class="lola">8 (812) 123-45-67 | Работаем 7 дней в неделю | 9:00 — 18:00 p>
                         </div>
                     </div>
                     <div class="col-6">
@@ -72,7 +74,11 @@
                             </div>
                         </div>
                         <div class="jamshid">
-                            <p class="eldor">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum purus, est tortor <br> pulvinar ut in. Fringilla a diam enim sed justo, sed iaculis sagittis. Tortor id eu interdum <br> nec ut iaculis. Penatibus ullamcorper ultricies morbi ipsum sem metus pharetra, mi. <br> Tortor nibh magna feugiat id nunc, dui nisl viverra.</p>
+                            <p class="eldor">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum
+                                purus, est tortor <br> pulvinar ut in. Fringilla a diam enim sed justo, sed iaculis
+                                sagittis. Tortor id eu interdum <br> nec ut iaculis. Penatibus ullamcorper ultricies
+                                morbi ipsum sem metus pharetra, mi. <br> Tortor nibh magna feugiat id nunc, dui nisl
+                                viverra.</p>
                         </div>
                     </div>
                 </div>
@@ -91,28 +97,28 @@
                         <img src="./img/62050 1.png" alt="" class="soat">
                     </div>
                     <p class="foll">Louis XVI ATHOS</p>
-                    <p class="davron">165 000 руб.  </p>
+                    <p class="davron">165 000 руб. </p>
                 </div>
                 <div class="col-3">
                     <div class="cardd">
                         <img src="./img/62050 1.png" alt="" class="soat">
                     </div>
                     <p class="foll">Louis XVI ATHOS</p>
-                    <p class="davron">165 000 руб.  </p>
+                    <p class="davron">165 000 руб. </p>
                 </div>
                 <div class="col-3">
                     <div class="cardd">
                         <img src="./img/62050 1.png" alt="" class="soat">
                     </div>
                     <p class="foll">Louis XVI ATHOS</p>
-                    <p class="davron">165 000 руб.  </p>
+                    <p class="davron">165 000 руб. </p>
                 </div>
                 <div class="col-3">
                     <div class="cardd">
                         <img src="./img/62050 1.png" alt="" class="soat">
                     </div>
                     <p class="foll">Louis XVI ATHOS</p>
-                    <p class="davron">165 000 руб.  </p>
+                    <p class="davron">165 000 руб. </p>
                 </div>
                 <div class="col-6">
                     <img src="./img/Rectangle 9.png" alt="" class="kastyum">
@@ -120,7 +126,14 @@
                 <div class="col-6">
                     <div class="folbin">
                         <p class="golane">коллекция 2018</p>
-                        <p class="coco">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut <br> mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus <br> vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet <br> convallis quis gravida facilisis vulputate. Faucibus facilisi habitasse ipsum <br> interdum dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada <br> integer. Aenean praesent viverra nulla nullam natoque volutpat curabitur <br> auctor. Viverra viverra ullamcorper scelerisque risus dignissim egestas. Id <br> aliquam a aliquam egestas leo orci pharetra sed diam. </p>
+                        <p class="coco">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut
+                            <br> mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus <br>
+                            vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet <br> convallis quis
+                            gravida facilisis vulputate. Faucibus facilisi habitasse ipsum <br> interdum dictum aliquet.
+                            Velit quis ullamcorper pulvinar nulla malesuada <br> integer. Aenean praesent viverra nulla
+                            nullam natoque volutpat curabitur <br> auctor. Viverra viverra ullamcorper scelerisque risus
+                            dignissim egestas. Id <br> aliquam a aliquam egestas leo orci pharetra sed diam.
+                        </p>
                         <button class="reulan">посмотреть коллекцию</button>
                     </div>
                 </div>
@@ -139,21 +152,21 @@
                         <img src="./img/62050 1.png" alt="" class="soat">
                     </div>
                     <p class="foll">Louis XVI ATHOS</p>
-                    <p class="davron">165 000 руб.  </p>
+                    <p class="davron">165 000 руб. </p>
                 </div>
                 <div class="col-3">
                     <div class="cardd">
                         <img src="./img/62050 1.png" alt="" class="soat">
                     </div>
                     <p class="foll">Louis XVI ATHOS</p>
-                    <p class="davron">165 000 руб.  </p>
+                    <p class="davron">165 000 руб. </p>
                 </div>
                 <div class="col-3">
                     <div class="cardd">
                         <img src="./img/62050 1.png" alt="" class="soat">
                     </div>
                     <p class="foll">Louis XVI ATHOS</p>
-                    <p class="davron">165 000 руб.  </p>
+                    <p class="davron">165 000 руб. </p>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -162,21 +175,21 @@
                         <img src="./img/62050 1.png" alt="" class="soat">
                     </div>
                     <p class="foll">Louis XVI ATHOS</p>
-                    <p class="davron">165 000 руб.  </p>
+                    <p class="davron">165 000 руб. </p>
                 </div>
                 <div class="col-3">
                     <div class="cardd">
                         <img src="./img/62050 1.png" alt="" class="soat">
                     </div>
                     <p class="foll">Louis XVI ATHOS</p>
-                    <p class="davron">165 000 руб.  </p>
+                    <p class="davron">165 000 руб. </p>
                 </div>
                 <div class="col-3">
                     <div class="cardd">
                         <img src="./img/62050 1.png" alt="" class="soat">
                     </div>
                     <p class="foll">Louis XVI ATHOS</p>
-                    <p class="davronn">165 000 руб.  </p>
+                    <p class="davronn">165 000 руб. </p>
                 </div>
             </div>
         </div>
@@ -208,8 +221,12 @@
             <div class="row">
                 <div class="col-4">
                     <div class="pablo">
-                        <h5 class="plamga">О магазине</h5>
-                        <p class="loram">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi semper viverra nunc cursus tortor lectus nunc nulla nibh. Egestas amet consectetur vel vitae aliquam dictum suspendisse. Lobortis eget consequat, tellus et et sed turpis. Pretium quisque vitae, amet, porttitor odio ultricies massa pharetra leo. Et ipsum urna fames in sit mi ultrices nisi, nunc.</p>
+                        <h5 class="plamga">o магазине</h5>
+                        <p class="loram">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi semper viverra nunc
+                            cursus tortor lectus nunc nulla nibh. Egestas amet consectetur vel vitae aliquam dictum
+                            suspendisse. Lobortis eget consequat, tellus et et sed turpis. Pretium quisque vitae, amet,
+                            porttitor odio ultricies massa pharetra leo. Et ipsum urna fames in sit mi ultrices nisi,
+                            nunc.</p>
                     </div>
                 </div>
                 <div class="col-4">
@@ -225,7 +242,8 @@
                 <div class="col-4">
                     <div class="pablo">
                         <p class="gol">РАссылка</p>
-                        <p class="hader">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi  semper viverra nunc cursus tortor lectus nunc nulla nibh.</p>
+                        <p class="hader">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi semper viverra nunc
+                            cursus tortor lectus nunc nulla nibh.</p>
                         <input class="check" type="text" placeholder=" sening pochtang">
                     </div>
                 </div>
@@ -252,18 +270,9 @@
 
 
 
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
-
-
-
-
-
-
-
