--- a/index.html
+++ b/index.html
@@ -222,11 +222,10 @@
                 <div class="col-4">
                     <div class="pablo">
                         <h5 class="plamga">o магазине</h5>
-                        <p class="loram">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi semper viverra nunc
-                            cursus tortor lectus nunc nulla nibh. Egestas amet consectetur vel vitae aliquam dictum
-                            suspendisse. Lobortis eget consequat, tellus et et sed turpis. Pretium quisque vitae, amet,
-                            porttitor odio ultricies massa pharetra leo. Et ipsum urna fames in sit mi ultrices nisi,
-                            nunc.</p>
+                        <p class="loram">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi semper viverra nunc cursus tortor lectus nunc nulla nibh. Egestas amet consectetur vel vitae aliquam dictum
+                        suspendisse. Lobortis eget consequat, tellus et et sed turpis. Pretium quisque vitae, amet,
+                        porttitor odio ultricies massa pharetra leo. Et ipsum urna fames in sit mi ultrices nisi,
+                        nunc.</p>
                     </div>
                 </div>
                 <div class="col-4">
@@ -259,6 +258,9 @@
                 </div>
                 <div class="col-6">
                     <p class="gmail">Сделано Figma.info</p>
+                </div>
+                <div class="bolike">
+                    <p class="onobol"></p>
                 </div>
             </div>
         </div>
